--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
     <!-- <link rel="shortcut icon" type="image/x-icon" href="favicon.ico"> -->
     <link rel="icon" href="favicon.png">
     <link rel="apple-touch-icon" href="favicon.png">
-    
+
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
+    <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
     
