--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
     <link rel="apple-touch-icon" href="favicon.png">
 
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.css">
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
