01. 최상위 요소, BEM

--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
+<div class="body__container">
+    
+</div>
     
 </body>
 </html>
