--- a/index.html
+++ b/index.html
@@ -45,12 +45,28 @@
                 <div class="logo">
                     <a href="#"> GitHub</a>
                 </div>
-                
+
                 <ul class="main-menu">
                     <li><a href="#">Personal</a></li>
                     <li><a href="#">Open source</a></li>
                     <li><a href="#">Business</a></li>
                     <li><a href="#">Explore</a></li>
+                </ul>
+            </div>
+
+            <div class="sign-group">
+                <div class="btn-group">
+                    <a href="#" class="btn sign-in">Sing in</a>
+                    <a href="#" class="btn btn--primary sing-up">Sing up</a>
+                </div>
+                <form id="search-form" method="POST" action="">
+                    <input type="text" id="search" class="input--text" placeholder="Search GitHub">
+                    <input type="submit" value="Submit">
+                </form>
+                <ul class="sub-menu">
+                    <li><a href="#">Pricing</a></li>
+                    <li><a href="#">Blog</a></li>
+                    <li><a href="#">Support</a></li>
                 </ul>
             </div>
         </div>
