--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
 
     <!-- HEADER -->
     <header class="section">
-        <div class="inner">
+        <div class="inner clearfix">
 
-            <div class="menu-group">
+            <div class="menu-group float--left">
                 <div class="logo">
                     <a href="#"> GitHub</a>
                 </div>
@@ -54,7 +54,7 @@
                 </ul>
             </div>
 
-            <div class="sign-group">
+            <div class="sign-group float--right">
                 <div class="btn-group">
                     <a href="#" class="btn sign-in">Sing in</a>
                     <a href="#" class="btn btn--primary sing-up">Sing up</a>
