--- a/index.html
+++ b/index.html
@@ -149,6 +149,24 @@
         </div>
 
     </section>
+
+    <!-- Where is -->
+    <section class="section section--where-is">
+        <div class="inner">
+
+            <div class="summary">
+                <div class="summary__title">
+                    Where is GitHub?
+                </div>
+                <div class="summary__description">
+                    GitHub is where people build software. More than 18 million people use GitHub to discover, fork, and contribute to over 48 million projects.
+                </div>
+            </div>
+
+            <div id="mp"></div>
+
+        </div>
+    </section>
 </div>
     
 </body>
