--- a/index.html
+++ b/index.html
@@ -163,11 +163,32 @@
                 </div>
             </div>
 
-            <div id="mp"></div>
+            <div id="map"></div>
 
         </div>
     </section>
 </div>
-    
+<script>
+    function initMap() {
+        const myLatLng = {
+            lat: 37.782293,
+            lng: -122.391240
+        }
+        const map = new google.maps.Map (
+            document.getElementById('map'),
+            {
+                center:myLatLng,
+                scrollwhele: false,
+                zoom: 18
+            }
+        );
+        const marker = new google.maps.Marker({
+            position: myLatLng,
+            map: map,
+            title: 'GitHub'
+        });
+    }
+</script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCTQIlxBn5AfKGvsfJiormAE1esN3fcCkg&callback=initMap" async defer></script>
 </body>
 </html>
