--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     <a href="#"> GitHub</a>
                 </div>
 
-                <ul class="main-menu">
+                <ul class="main-menu toggle">
                     <li><a href="#">Personal</a></li>
                     <li><a href="#">Open source</a></li>
                     <li><a href="#">Business</a></li>
@@ -54,7 +54,7 @@
                 </ul>
             </div>
 
-            <div class="sign-group float--right">
+            <div class="sign-group float--right toggle">
                 <div class="btn-group">
                     <a href="#" class="btn sign-in">Sing in</a>
                     <a href="#" class="btn btn--primary sing-up">Sing up</a>
@@ -69,6 +69,9 @@
                     <li><a href="#">Support</a></li>
                 </ul>
             </div>
+
+            <div id="toggle-btn">Header Menu Toggle Button</div>
+
         </div>
     </header>
 
