--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.css">
     <link rel="stylesheet" href="css/main.css">
+
+    <script defer src="main.js"></script>
 </head>
 <body>
 <div class="body__container">
